--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,72 @@
 version: '3'
 volumes:
   dados:
+networks:
+  banco:
+  web:
+  fila:     
 services:
   db:
     image: postgres:9.6
     volumes:
-      # VOLUMES DOS DADOS
+      # volumes dos dados
       - dados:/var/lib/postgresql/data
 
-      #SCRIPTS
+      # scripts
       - ./scripts/scripts
       - ./scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
+
+    # roda na rede banco  
+    networks: 
+      - banco
+  frontend:
+    image: nginx:1.13
+    volumes:
+    #site
+    - ./web:/usr/share/nginx/html/
+
+    #proxy reverso
+    - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+
+    ports: 
+    - 80:80
+
+    # roda na rede web
+    networks: 
+      - web
+    # orquestrar e inicar as dependencias dos serviços ex- app
+    # neste caso se iniciar serviço web irá iniciar o serviço app 
+    depends_on: 
+      - app
+  app:
+    image: python:3.6
+    volumes:
+      #aplicação
+      - ./app:/app
+    working_dir: /app
+    command: bash ./app.sh
+    ports:
+      - 8080:8080 
+    #roda na rede web e banco  
+    networks:
+      - banco  
+      - web
+      - fila
+    depends_on:
+      - db
+      - queue  
+  queue:
+    image: redis:3.2
+    networks: 
+      - fila
+  work:
+    image: python:3.6
+    volumes:
+      #worker
+      - ./worker:/worker
+    working_dir: /worker
+    command: bash ./app.sh
+    networks: 
+      - fila
+    depends_on:
+      - queue        
